2009-05-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (AUTOMAKE_OPTIONS): Enable parallel-tests and
	color-tests options.  Parallel test execution does not pass tests
	yet.

	* PerlMagick/PerlMagickCheck.sh.in: Run PerlMagick tests via a
	normal check script rather than a check hook.

	* coders/identity.c (ReadIdentityImage): Fix compilation with Sun
	compiler.

2009-05-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwfile.c: Allow the user to specify the basename for
	temporary files.

	* tests/Makefile.am: Add a set of TXT read/write tests.  Pass the
	file name specification to use for the rwfile-based tests.

2009-05-21  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/txt.c Fixed endian set to native endian.

2009-05-20  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/txt.c Faster read ImageMagick files.
	Removed BImgBuff=NULL;

2009-05-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/txt.c (WriteTXTImage): Ensure that image depth is 8, 16,
	or 32.

	* www/formats.rst: Add CALS to formats list.

	* coders/cals.c (RegisterCALSImage): Consolidate duplicate text
	strings.

2009-05-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/cals.c: Add support for reading CALS type 1 format.
	Contributed by John Sergeant.

	* coders/identity.c: New coder to return a Hald identity CLUT
	image.

2009-05-19  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/txt.c Ability to read back Q32 txt files.

2009-05-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Support Linux style silent build rules.

2009-05-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am: Updated to Automake 1.11.

2009-05-17  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/txt.c First attempt to read back txt file.
	It is amazingly ineffective, but it seems to work.

2009-05-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resize.c (HorizontalFilter, VerticalFilter): When