@@ -1,3 +1,8 @@
+2009-05-21  Fojtik Jaroslav  <JaFojtik@seznam.cz>
+
+	* coders/txt.c Fixed char vs int parameter problem.
+        Better detection of too dark 16bit or 32bit images.
+
 2009-05-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* Makefile.am (AUTOMAKE_OPTIONS): Enable parallel-tests and
